[package]
name = "rossa"
version = "0.1.0"
authors = ["rednithin <reddy.nithinpg@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
log = "0.4.8"
tera = "1.3.0"
clap = "3.0.0-beta.1"
rand = "0.7.3"
rust-embed = "5.5.1"
mime_guess = "2.0.3"
